--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,23 @@ before_install:
     sudo apt install -y python-gtk2;
     else
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pygobject/python3-gi_3.30.1-1ubuntu1_amd64.deb;
-    sudo dpkg -i python3-gi_3.30.1-1ubuntu1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/p/pycairo/python3-cairo_1.16.2-1build1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pygobject/python3-gi-cairo_3.30.1-1ubuntu1_amd64.deb;
-    sudo dpkg -i python3-gi-cairo_3.30.1-1ubuntu1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/g/gtk+3.0/libgtk-3-common_3.24.1-1ubuntu2_all.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/libpangoft2-1.0-0_1.42.4-3_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/libpangocairo-1.0-0_1.42.4-3_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/libpango-1.0-0_1.42.4-3_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/g/gtk+3.0/libgtk-3-0_3.24.1-1ubuntu2_amd64.deb;
-    sudo dpkg -i libgtk-3-0_3.24.1-1ubuntu2_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/g/gtk+3.0/gir1.2-gtk-3.0_3.24.1-1ubuntu2_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/gir1.2-pango-1.0_1.42.4-3_amd64.deb;
+    sudo dpkg -i python3-gi_3.30.1-1ubuntu1_amd64.deb;
+    sudo dpkg -i python3-cairo_1.16.2-1build1_amd64.deb;
+    sudo dpkg -i python3-gi-cairo_3.30.1-1ubuntu1_amd64.deb;
+    sudo dpkg -i libgtk-3-common_3.24.1-1ubuntu2_all.deb;
+    sudo dpkg -i libpangoft2-1.0-0_1.42.4-3_amd64.deb;
+    sudo dpkg -i libpangocairo-1.0-0_1.42.4-3_amd64.deb;
+    sudo dpkg -i libpango-1.0-0_1.42.4-3_amd64.deb
+    sudo dpkg -i libgtk-3-0_3.24.1-1ubuntu2_amd64.deb;
     sudo dpkg -i gir1.2-pango-1.0_1.42.4-3_amd64.deb
     sudo dpkg -i gir1.2-gtk-3.0_3.24.1-1ubuntu2_amd64.deb;
     sudo apt-get install libgirepository1.0-dev;
