--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pycairo/python3-cairo_1.16.2-1build1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pygobject/python3-gi-cairo_3.30.1-1ubuntu1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/g/gtk+3.0/libgtk-3-common_3.24.1-1ubuntu2_all.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/f/fontconfig/fontconfig-config_2.13.0-5ubuntu3_all.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/f/fontconfig/libfontconfig1_2.13.0-5ubuntu3_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/libpangoft2-1.0-0_1.42.4-3_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/libpangocairo-1.0-0_1.42.4-3_amd64.deb;
@@ -32,6 +33,7 @@ before_install:
     sudo dpkg -i python3-cairo_1.16.2-1build1_amd64.deb;
     sudo dpkg -i python3-gi-cairo_3.30.1-1ubuntu1_amd64.deb;
     sudo dpkg -i libgtk-3-common_3.24.1-1ubuntu2_all.deb;
+    sudo dpkg -i fontconfig-config_2.13.0-5ubuntu3_all.deb;
     sudo dpkg -i libfontconfig1_2.13.0-5ubuntu3_amd64.deb;
     sudo dpkg -i libpango-1.0-0_1.42.4-3_amd64.deb;
     sudo dpkg -i libpangoft2-1.0-0_1.42.4-3_amd64.deb;
@@ -39,7 +41,6 @@ before_install:
     sudo dpkg -i libgtk-3-0_3.24.1-1ubuntu2_amd64.deb;
     sudo dpkg -i gir1.2-pango-1.0_1.42.4-3_amd64.deb
     sudo dpkg -i gir1.2-gtk-3.0_3.24.1-1ubuntu2_amd64.deb;
-    sudo apt-get install libgirepository1.0-dev;
     fi
 install:
   - pip install -r requirements-dev.txt
