--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ before_install:
     else
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pygobject/python3-gi_3.30.1-1ubuntu1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pycairo/python3-cairo_1.16.2-1build1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/c/cairo/libcairo2_1.15.12-1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/c/cairo/libcairo-gobject2_1.15.12-1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pygobject/python3-gi-cairo_3.30.1-1ubuntu1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/g/gtk+3.0/libgtk-3-common_3.24.1-1ubuntu2_all.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/f/fontconfig/fontconfig-config_2.13.0-5ubuntu3_all.deb;
@@ -35,6 +37,8 @@ before_install:
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/gir1.2-pango-1.0_1.42.4-3_amd64.deb;
     sudo dpkg -i python3-gi_3.30.1-1ubuntu1_amd64.deb;
     sudo dpkg -i python3-cairo_1.16.2-1build1_amd64.deb;
+    sudo dpkg -i libcairo-gobject2_1.15.12-1_amd64.deb;
+    sudo dpkg -i libcairo2_1.15.12-1_amd64.deb;
     sudo dpkg -i python3-gi-cairo_3.30.1-1ubuntu1_amd64.deb;
     sudo dpkg -i libgtk-3-common_3.24.1-1ubuntu2_all.deb;
     sudo dpkg -i fontconfig-config_2.13.0-5ubuntu3_all.deb;
