--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - if [[ $TRAVIS_PYTHON_VERSION < 3 ]]; then
     sudo apt install -y python-gtk2;
     else
-    sudo apt install python-gi python-gi-cairo python3-gi python3-gi-cairo gir1.2-gtk-3.0
+    sudo apt install python-gi python-gi-cairo python3-gi python3-gi-cairo gir1.2-gtk-3.0;
     fi
 install:
   - pip install -r requirements-dev.txt
