--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,4 @@
 language: python
-python:
-  - "2.7"
-  - "3.5"
-virtualenv:
-  system_site_packages: true
 sudo: required
 dist: xenial
 services:
@@ -13,13 +8,27 @@ addons:
     sources:
       - sourceline: 'deb http://us-east-1.ec2.archive.ubuntu.com/ubuntu/ xenial universe multiverse'
     update: true
-before_install:
-  - if [[ $TRAVIS_PYTHON_VERSION < 3 ]]; then
-    sudo apt install -y python-gtk2;
-    else
-    sudo apt install python-gi python-gi-cairo python3-gi python3-gi-cairo gir1.2-gtk-3.0;
-    fi
+
+matrix:
+  include:
+    - python: "2.7"
+    - python: "3.5"
+    - python: "3.6"
+    - python: "3.7"
+
 install:
   - pip install -r requirements-dev.txt
+  - if [[ $TRAVIS_PYTHON_VERSION < 3 ]]; then
+    wget http://ftp.gnome.org/pub/GNOME/sources/pygtk/2.24/pygtk-2.24.0.tar.bz2;
+    tar xf pygtk-2.24.0.tar.bz2;
+    cd pygtk-2.24.0;
+    export PKG_CONFIG_PATH=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/lib/pkgconfig;
+    ./configure --prefix=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/;
+    make;
+    make install;
+    else
+    sudo apt install python3-gi python3-gi-cairo gir1.2-gtk-3.0 libgirepository1.0-dev;
+    pip install gobject PyGObject;
+    fi
 script:
   - python atest/run.py -e no-xvfb atest
