--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ matrix:
 install:
   - pip install -r requirements-dev.txt
   - if [[ $TRAVIS_PYTHON_VERSION < 3 ]]; then
+    sudo apt install -y python-gtk2;
     wget http://ftp.gnome.org/pub/GNOME/sources/pygtk/2.24/pygtk-2.24.0.tar.bz2;
     tar xf pygtk-2.24.0.tar.bz2;
     cd pygtk-2.24.0;
@@ -27,7 +28,43 @@ install:
     make;
     make install;
     else
-    sudo apt install python3-gi python3-gi-cairo gir1.2-gtk-3.0 libgirepository1.0-dev;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/p/pygobject/python3-gi_3.30.1-1ubuntu1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/p/pycairo/python3-cairo_1.16.2-1build1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/c/cairo/libcairo2_1.15.12-1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/c/cairo/libcairo-gobject2_1.15.12-1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/p/pygobject/python3-gi-cairo_3.30.1-1ubuntu1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/g/gtk+3.0/libgtk-3-common_3.24.1-1ubuntu2_all.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/f/fontconfig/fontconfig-config_2.13.0-5ubuntu3_all.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/f/fontconfig/libfontconfig1_2.13.0-5ubuntu3_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/libpangoft2-1.0-0_1.42.4-3_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/libpangocairo-1.0-0_1.42.4-3_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/f/fribidi/libfribidi0_1.0.5-3_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/libpango-1.0-0_1.42.4-3_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/g/gtk+3.0/libgtk-3-0_3.24.1-1ubuntu2_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/a/atk1.0/libatk1.0-data_2.30.0-1_all.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/a/atk1.0/libatk1.0-0_2.30.0-1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/a/atk1.0/gir1.2-atk-1.0_2.30.0-1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/g/gtk+3.0/gir1.2-gtk-3.0_3.24.1-1ubuntu2_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/gir1.2-pango-1.0_1.42.4-3_amd64.deb;
+    sudo dpkg -i python3-gi_3.30.1-1ubuntu1_amd64.deb;
+    sudo dpkg -i python3-cairo_1.16.2-1build1_amd64.deb;
+    sudo dpkg -i libcairo-gobject2_1.15.12-1_amd64.deb;
+    sudo dpkg -i libcairo2_1.15.12-1_amd64.deb;
+    sudo dpkg -i python3-gi-cairo_3.30.1-1ubuntu1_amd64.deb;
+    sudo dpkg -i libgtk-3-common_3.24.1-1ubuntu2_all.deb;
+    sudo dpkg -i fontconfig-config_2.13.0-5ubuntu3_all.deb;
+    sudo dpkg -i libfontconfig1_2.13.0-5ubuntu3_amd64.deb;
+    sudo dpkg -i libfribidi0_1.0.5-3_amd64.deb;
+    sudo dpkg -i libpango-1.0-0_1.42.4-3_amd64.deb;
+    sudo dpkg -i libpangoft2-1.0-0_1.42.4-3_amd64.deb;
+    sudo dpkg -i libpangocairo-1.0-0_1.42.4-3_amd64.deb;
+    sudo dpkg -i libatk1.0-data_2.30.0-1_all.deb;
+    sudo dpkg -i libgtk-3-0_3.24.1-1ubuntu2_amd64.deb;
+    sudo dpkg -i libatk1.0-0_2.30.0-1_amd64.deb;
+    sudo dpkg -i gir1.2-atk-1.0_2.30.0-1_amd64.deb;
+    sudo dpkg -i gir1.2-pango-1.0_1.42.4-3_amd64.deb;
+    sudo dpkg -i gir1.2-gtk-3.0_3.24.1-1ubuntu2_amd64.deb;
+    sudo apt install libgirepository1.0-dev;
     pip install gobject PyGObject;
     fi
 script:
