--- a/.travis.yml
+++ b/.travis.yml
@@ -18,19 +18,19 @@ matrix:
 install:
   - pip install -r requirements-dev.txt
   - if [[ $TRAVIS_PYTHON_VERSION < 3 ]]; then
-    curl 'http://cairographics.org/releases/py2cairo-1.10.0.tar.bz2' > "py2cairo.tar.bz2"
-    tar -xvf py2cairo.tar.bz2
-    cd py2cairo*
-    autoreconf -ivf
-    ./configure --prefix=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/ --disable-dependency-tracking
-    make
-    make install
-    curl 'http://ftp.gnome.org/pub/GNOME/sources/pygobject/2.28/pygobject-2.28.6.tar.bz2' > 'pygobject.tar.bz2'
-    tar -xvf pygobject.tar.bz2
-    cd pygobject*
-    ./configure --prefix=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/ --disable-introspection
-    make
-    make install
+    curl 'http://cairographics.org/releases/py2cairo-1.10.0.tar.bz2' > "py2cairo.tar.bz2";
+    tar -xvf py2cairo.tar.bz2;
+    cd py2cairo*;
+    autoreconf -ivf;
+    ./configure --prefix=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/ --disable-dependency-tracking;
+    make;
+    make install;
+    curl 'http://ftp.gnome.org/pub/GNOME/sources/pygobject/2.28/pygobject-2.28.6.tar.bz2' > 'pygobject.tar.bz2';
+    tar -xvf pygobject.tar.bz2;
+    cd pygobject*;
+    ./configure --prefix=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/ --disable-introspection;
+    make;
+    make install;
     wget http://ftp.gnome.org/pub/GNOME/sources/pygtk/2.24/pygtk-2.24.0.tar.bz2;
     tar xf pygtk-2.24.0.tar.bz2;
     cd pygtk-2.24.0;
