--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,14 @@ install:
     ./configure --prefix=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/ --disable-dependency-tracking;
     make;
     make install;
+    cd ..
     wget http://ftp.gnome.org/pub/GNOME/sources/pygobject/2.28/pygobject-2.28.6.tar.bz2;
     tar xf pygobject-2.28.6.tar.bz2;
     cd pygobject-2.28.6;
     ./configure --prefix=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/ --disable-introspection;
     make;
     make install;
+    cd ..
     wget http://ftp.gnome.org/pub/GNOME/sources/pygtk/2.24/pygtk-2.24.0.tar.bz2;
     tar xf pygtk-2.24.0.tar.bz2;
     cd pygtk-2.24.0;
@@ -38,6 +40,7 @@ install:
     ./configure --prefix=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/;
     make;
     make install;
+    cd ..
     else
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pygobject/python3-gi_3.30.1-1ubuntu1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pycairo/python3-cairo_1.16.2-1build1_amd64.deb;
@@ -59,6 +62,8 @@ install:
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/gir1.2-pango-1.0_1.42.4-3_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/c/cairo/libcairo-script-interpreter2_1.15.12-1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/c/cairo/libcairo2-dev_1.15.12-1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/g/gobject-introspection/libgirepository-1.0-1_1.58.0-1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/g/gobject-introspection/libgirepository1.0-dev_1.58.0-1_amd64.deb;
     sudo dpkg -i python3-gi_3.30.1-1ubuntu1_amd64.deb;
     sudo dpkg -i python3-cairo_1.16.2-1build1_amd64.deb;
     sudo dpkg -i libcairo-gobject2_1.15.12-1_amd64.deb;
@@ -79,7 +84,8 @@ install:
     sudo dpkg -i gir1.2-gtk-3.0_3.24.1-1ubuntu2_amd64.deb;
     sudo dpkg -i libcairo-script-interpreter2_1.15.12-1_amd64.deb;
     sudo dpkg -i libcairo2-dev_1.15.12-1_amd64.deb;
-    sudo apt install libgirepository1.0-dev;
+    sudo dpkg -i libgirepository-1.0-1_1.58.0-1_amd64.deb;
+    sudo dpkg -i libgirepository1.0-dev_1.58.0-1_amd64.deb;
     pip install gobject PyGObject;
     fi
 script:
