--- a/.travis.yml
+++ b/.travis.yml
@@ -86,7 +86,7 @@ install:
     sudo dpkg -i libcairo2-dev_1.15.12-1_amd64.deb;
     sudo dpkg -i libgirepository-1.0-1_1.58.0-1_amd64.deb;
     sudo dpkg -i libgirepository1.0-dev_1.58.0-1_amd64.deb;
-    pip install gobject PyGObject;
     fi
+    pip install PyGObject;
 script:
   - python atest/run.py -e no-xvfb atest
