--- a/.travis.yml
+++ b/.travis.yml
@@ -87,6 +87,6 @@ install:
     sudo dpkg -i libgirepository-1.0-1_1.58.0-1_amd64.deb;
     sudo dpkg -i libgirepository1.0-dev_1.58.0-1_amd64.deb;
     fi
-    pip install PyGObject;
+    - pip install PyGObject;
 script:
   - python atest/run.py -e no-xvfb atest
