--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ install:
     make;
     make install;
     cd ..;
+    pip install PyGObject;
     else
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pygobject/python3-gi_3.30.1-1ubuntu1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pycairo/python3-cairo_1.16.2-1build1_amd64.deb;
@@ -86,7 +87,7 @@ install:
     sudo dpkg -i libcairo2-dev_1.15.12-1_amd64.deb;
     sudo dpkg -i libgirepository-1.0-1_1.58.0-1_amd64.deb;
     sudo dpkg -i libgirepository1.0-dev_1.58.0-1_amd64.deb;
+    pip install PyGObject;
     fi
-    - pip install PyGObject;
 script:
   - python atest/run.py -e no-xvfb atest
