--- a/.travis.yml
+++ b/.travis.yml
@@ -18,31 +18,29 @@ matrix:
 install:
   - pip install -r requirements-dev.txt
   - if [[ $TRAVIS_PYTHON_VERSION < 3 ]]; then
-    export PKG_CONFIG_PATH=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/lib/pkgconfig;
-    wget http://cairographics.org/releases/py2cairo-1.10.0.tar.bz2;
+    export VIRT_ROOT=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION;
+    export PKG_CONFIG_PATH=$VIRT_ROOT/lib/pkgconfig;
+    wget http://www.cairographics.org/releases/py2cairo-1.10.0.tar.bz2;
     tar xf py2cairo-1.10.0.tar.bz2;
     cd py2cairo-1.10.0;
-    autoreconf -ivf;
-    ./configure --prefix=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/ --disable-dependency-tracking;
-    make;
-    make install;
+    ./waf configure --prefix=$VIRT_ROOT > /dev/null;
+    ./waf build > /dev/null;
+    ./waf install > /dev/null;
     cd ..;
     wget http://ftp.gnome.org/pub/GNOME/sources/pygobject/2.28/pygobject-2.28.6.tar.bz2;
     tar xf pygobject-2.28.6.tar.bz2;
     cd pygobject-2.28.6;
-    ./configure --prefix=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/ --disable-introspection;
-    make;
-    make install;
+    ./configure --prefix=$VIRT_ROOT --disable-introspection > /dev/null;
+    make > /dev/null;
+    make install > /dev/null;
     cd ..;
     wget http://ftp.gnome.org/pub/GNOME/sources/pygtk/2.24/pygtk-2.24.0.tar.bz2;
     tar xf pygtk-2.24.0.tar.bz2;
     cd pygtk-2.24.0;
-    ./configure --prefix=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION/;
-    make;
-    make install;
+    ./configure --prefix=$VIRT_ROOT > /dev/null;
+    make > /dev/null;
+    make install > /dev/null;
     cd ..;
-    sudo apt install libgirepository1.0-dev;
-    pip install PyGObject;
     else
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pygobject/python3-gi_3.30.1-1ubuntu1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pycairo/python3-cairo_1.16.2-1build1_amd64.deb;
@@ -88,7 +86,7 @@ install:
     sudo dpkg -i libcairo2-dev_1.15.12-1_amd64.deb;
     sudo dpkg -i libgirepository-1.0-1_1.58.0-1_amd64.deb;
     sudo dpkg -i libgirepository1.0-dev_1.58.0-1_amd64.deb;
-    pip install PyGObject;
+    pip install PyGObject==3.30.1;
     fi
 script:
   - python atest/run.py -e no-xvfb atest
