--- a/.travis.yml
+++ b/.travis.yml
@@ -18,14 +18,15 @@ matrix:
 install:
   - pip install -r requirements-dev.txt
   - if [[ $TRAVIS_PYTHON_VERSION < 3 ]]; then
+    sudo apt-get install libcairo2-dev libgtk2.0-dev libglib2.0-dev libtool libpango1.0-dev libatk1.0-dev;
     export VIRT_ROOT=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION;
     export PKG_CONFIG_PATH=$VIRT_ROOT/lib/pkgconfig;
     wget http://www.cairographics.org/releases/py2cairo-1.10.0.tar.bz2;
     tar xf py2cairo-1.10.0.tar.bz2;
     cd py2cairo-1.10.0;
-    ./waf configure --prefix=$VIRT_ROOT > /dev/null;
-    ./waf build > /dev/null;
-    ./waf install > /dev/null;
+    ./configure --prefix=$VIRT_ROOT > /dev/null;
+    make > /dev/null;
+    make install > /dev/null;
     cd ..;
     wget http://ftp.gnome.org/pub/GNOME/sources/pygobject/2.28/pygobject-2.28.6.tar.bz2;
     tar xf pygobject-2.28.6.tar.bz2;
