--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,9 @@ install:
     wget http://www.cairographics.org/releases/py2cairo-1.10.0.tar.bz2;
     tar xf py2cairo-1.10.0.tar.bz2;
     cd py2cairo-1.10.0;
-    ./configure --prefix=$VIRT_ROOT > /dev/null;
-    make > /dev/null;
-    make install > /dev/null;
+    ./waf configure --prefix=$VIRT_ROOT > /dev/null;
+    ./waf build > /dev/null;
+    ./waf install > /dev/null;
     cd ..;
     wget http://ftp.gnome.org/pub/GNOME/sources/pygobject/2.28/pygobject-2.28.6.tar.bz2;
     tar xf pygobject-2.28.6.tar.bz2;
