--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
 install:
   - pip install -r requirements-dev.txt
   - if [[ $TRAVIS_PYTHON_VERSION < 3 ]]; then
-    sudo apt-get install libcairo2-dev libgtk2.0-dev libglib2.0-dev libtool libpango1.0-dev libatk1.0-dev;
+    sudo apt-get install libtool;
     export VIRT_ROOT=/home/travis/virtualenv/python$TRAVIS_PYTHON_VERSION;
     export PKG_CONFIG_PATH=$VIRT_ROOT/lib/pkgconfig;
     wget http://www.cairographics.org/releases/py2cairo-1.10.0.tar.bz2;
