--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ install:
     make install > /dev/null;
     cd ..;
     else
-    sudo apt install python-gi python-gi-cairo python3-gi python3-gi-cairo gir1.2-gtk-3.0 libgirepository1.0-dev;
+    sudo apt install python-gi python-gi-cairo python3-gi python3-gi-cairo gir1.2-gtk-3.0 libgirepository1.0-dev python-gobject;
     pip install PyGObject;
     fi
 script:
