--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,23 @@
 language: python
 python:
   - "2.7"
-  - "3.6"
+  - "3.7"
 virtualenv:
   system_site_packages: true
 sudo: required
-dist: bionic
+dist: disco
 services:
   - xvfb
 addons:
   apt:
     sources:
-      - sourceline: 'deb http://us-east-1.ec2.archive.ubuntu.com/ubuntu/ bionic universe multiverse'
+      - sourceline: 'deb http://us-east-1.ec2.archive.ubuntu.com/ubuntu/ disco universe multiverse'
     update: true
 before_install:
   - if [[ $TRAVIS_PYTHON_VERSION < 3 ]]; then
     sudo apt install -y python-gtk2;
     else
-    wget http://ftp.br.debian.org/debian/pool/main/p/pygobject/python-gi_3.30.4-1_amd64.deb;
-    sudo dpkg -i python-gi_3.30.4-1_amd64.deb;
-    wget http://ftp.br.debian.org/debian/pool/main/p/pygobject-2/python-gobject-2_2.28.6-13+b1_amd64.deb;
-    sudo dpkg -i python-gobject-2_2.28.6-13+b1_amd64.deb;
-    wget http://ftp.br.debian.org/debian/pool/main/p/pygobject/python-gobject_3.30.4-1_all.deb;
-    sudo dpkg -i python-gobject_3.30.4-1_all.deb;
-    wget http://ftp.br.debian.org/debian/pool/main/p/pycairo/python-cairo_1.16.2-1+b1_amd64.deb;
-    sudo dpkg -i python-cairo_1.16.2-1+b1_amd64.deb;
-    wget http://ftp.br.debian.org/debian/pool/main/p/pygobject/python-gi-cairo_3.30.4-1_amd64.deb;
-    sudo dpkg -i python-gi-cairo_3.30.4-1_amd64.deb;
-    wget http://ftp.br.debian.org/debian/pool/main/p/pygobject/python3-gi_3.30.4-1_amd64.deb;
-    sudo dpkg -i python3-gi_3.30.4-1_amd64.deb;
-    wget http://ftp.br.debian.org/debian/pool/main/p/pycairo/python3-cairo_1.16.2-1+b1_amd64.deb;
-    sudo dpkg -i python3-cairo_1.16.2-1+b1_amd64.deb;
-    wget http://ftp.br.debian.org/debian/pool/main/p/pygobject/python3-gi-cairo_3.30.4-1_amd64.deb;
-    sudo dpkg -i python3-gi-cairo_3.30.4-1_amd64.deb;
-    sudo apt install -y gir1.2-gtk-3.0;
+    sudo apt install python-gi python-gi-cairo python3-gi python3-gi-cairo gir1.2-gtk-3.0;
     fi
 install:
   - pip install -r requirements-dev.txt
