--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,8 @@ install:
     make install > /dev/null;
     cd ..;
     else
+    wget http://mirrors.kernel.org/ubuntu/pool/main/g/glib2.0/libglib2.0-0_2.62.0-1_amd64.deb;
+    wget http://mirrors.kernel.org/ubuntu/pool/main/g/gobject-introspection/gir1.2-glib-2.0_1.60.1-1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pygobject/python3-gi_3.34.0-1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pycairo/python3-cairo_1.16.2-1build1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/c/cairo/libcairo2_1.15.12-1_amd64.deb;
@@ -63,9 +65,10 @@ install:
     wget http://mirrors.kernel.org/ubuntu/pool/main/p/pango1.0/gir1.2-pango-1.0_1.42.4-3_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/c/cairo/libcairo-script-interpreter2_1.15.12-1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/c/cairo/libcairo2-dev_1.15.12-1_amd64.deb;
-    wget http://security.ubuntu.com/ubuntu/pool/main/g/glib2.0/libglib2.0-0_2.58.1-2ubuntu0.2_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/g/gobject-introspection/libgirepository-1.0-1_1.58.0-1_amd64.deb;
     wget http://mirrors.kernel.org/ubuntu/pool/main/g/gobject-introspection/libgirepository1.0-dev_1.58.0-1_amd64.deb;
+    sudo dpkg -i libglib2.0-0_2.62.0-1_amd64.deb;
+    sudo dpkg -i gir1.2-glib-2.0_1.60.1-1_amd64.deb;
     sudo dpkg -i python3-gi_3.34.0-1_amd64.deb;
     sudo dpkg -i python3-cairo_1.16.2-1build1_amd64.deb;
     sudo dpkg -i libcairo-gobject2_1.15.12-1_amd64.deb;
@@ -86,7 +89,6 @@ install:
     sudo dpkg -i gir1.2-gtk-3.0_3.24.1-1ubuntu2_amd64.deb;
     sudo dpkg -i libcairo-script-interpreter2_1.15.12-1_amd64.deb;
     sudo dpkg -i libcairo2-dev_1.15.12-1_amd64.deb;
-    sudo dpkg -i libglib2.0-0_2.58.1-2ubuntu0.2_amd64.deb;
     sudo dpkg -i libgirepository-1.0-1_1.58.0-1_amd64.deb;
     sudo dpkg -i libgirepository1.0-dev_1.58.0-1_amd64.deb;
     pip install PyGObject;
